# qt_interface_stm32

./: CMakeLists.txt  LICENSE  README.md  STM32_Interface.pro
build-stm32_interface_improved-Desktop-Debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  STM32Interface  cmake_install.cmake
build-stm32_interface_improved-Desktop-Debug/STM32Interface_autogen/: moc_predefs.h  mocs_compilation.cpp
build-stm32_interface_improved-Desktop-Debug/STM32Interface_autogen/3JYSCEOBDA/: moc_MainWindow.cpp  moc_MainWindow.cpp.d
build-stm32_interface_improved-Desktop-Debug/STM32Interface_autogen/D6P2OG4ME3/: moc_JsonProtocol.cpp  moc_JsonProtocol.cpp.d  moc_SerialManager.cpp  moc_SerialManager.cpp.d  moc_SerialWorker.cpp  moc_SerialWorker.cpp.d
build-stm32_interface_improved-Desktop-Debug/STM32Interface_autogen/KECQXMYYOW/: moc_DeviceController.cpp  moc_DeviceController.cpp.d
build-stm32_interface_improved-Desktop-Debug/STM32Interface_autogen/VNQA4LF4BW/: moc_DataModel.cpp  moc_DataModel.cpp.d  moc_DeviceState.cpp  moc_DeviceState.cpp.d
build-stm32_interface_improved-Desktop-Debug/STM32Interface_autogen/include/: ui_MainWindow.h
docs/: ARCHITECTURE.md  MIGRATION.md  PORTFOLIO.md
src/: main.cpp
src/communication/: JsonProtocol.cpp  JsonProtocol.h  SerialManager.cpp  SerialManager.h  SerialWorker.cpp  SerialWorker.h
src/controller/: DeviceController.cpp  DeviceController.h
src/model/: DataModel.cpp  DataModel.h  DeviceState.cpp  DeviceState.h
src/view/: MainWindow.cpp  MainWindow.h  MainWindow.ui
stm32_firmware/: main_with_dma.c
